--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.mysql-connector-java-5.1.18-bin.jar=D:\\Hands-on training\\mysql-
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
